// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Default Avatar 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "borderRadius": 0,
          "overflow": "hidden",
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "http://s3.amazonaws.com/37assets/svn/765-default-avatar.png",
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.03)",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`Renders Default PNG w/o src 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "borderRadius": 0,
          "overflow": "hidden",
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "http://s3.amazonaws.com/37assets/svn/765-default-avatar.png",
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.03)",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`Renders Icon Image 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "borderRadius": 0,
          "overflow": "hidden",
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#8B1E3F",
            "height": 200,
            "justifyContent": "center",
            "width": 200,
          },
          Object {},
        ]
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 120,
            "tintColor": "white",
            "width": 120,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.03)",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`Renders Nested Avatar 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "borderRadius": 0,
          "overflow": "hidden",
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://heightline.com/wp-content/uploads/Justin-Roberts-640x427.jpg",
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.03)",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`Renders Profile Picture 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "borderRadius": 0,
          "overflow": "hidden",
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://heightline.com/wp-content/uploads/Justin-Roberts-640x427.jpg",
        }
      }
      style={
        Object {
          "height": 200,
          "width": 200,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.03)",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;
